--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 *.iml
-.gradle
-/local.properties
-/.idea/
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+.gradle/
+gradle/
+gradlew
+gradlew.bat
+.idea/
+local.properties
